# gen_xml

./: README.md  pyproject.toml
src/gen_xml/: __init__.py
