[project]
name = "gen-xml"
version = "0.1.0"
description = "Generate Neuroscope XML from OpenEphys recordings"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "spikeinterface[extractors]",
]

[project.scripts]
gen-xml = "gen_xml:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gen_xml"]
